--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -15,25 +15,25 @@
     //     color:white !important
     // }
 }
-.nav-link{
+// .nav-link{
     // --bs-nav-link-color: #9c9c9c !important;
     // --bs-navbar-active-color: white;
     // --bs-link-hover-color-rgb: white !important;
-    transition: color 0.2s ease-in-out;
+    // transition: color 0.2s ease-in-out;
     // &:hover{
     //     color: white !important;
     // }
 .page-main{
-    background-color: #000 !important;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // background-color: #000 !important;
+    min-height: 80vh;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
 }
-.bg-dark-gray{
-    background-color: #1b1b1b !important;
-}
-}
+// .bg-dark-gray{
+//     background-color: #1b1b1b !important;
+// }
+// }
 // .page-main{
 //     background-color: #000 !important;
 //     min-height: 100vh;
