--- a/assets/custom.css
+++ b/assets/custom.css
@@ -12,18 +12,8 @@
   font-weight: 600;
 }
 
-.nav-link {
-  transition: color 0.2s ease-in-out;
-}
-.nav-link .page-main {
-  background-color: #000 !important;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.nav-link .bg-dark-gray {
-  background-color: #1b1b1b !important;
+.page-main {
+  min-height: 80vh;
 }
 
 .bg-dark-gray {
