--- a/assets/custom.css
+++ b/assets/custom.css
@@ -112,3 +112,12 @@ html {
   --bs-btn-disabled-border-color: #3cb043;
   --bs-gradient: none;
 }/*# sourceMappingURL=custom.css.map */
+
+.pos-ft{
+  position: fixed;
+  top: 0;
+}
+
+.pt-6{
+  padding-top:6rem !important;
+}
