--- a/assets/custom.css
+++ b/assets/custom.css
@@ -9,6 +9,21 @@
   --bs-navbar-toggler-icon-bg:url("./images/icons/hamburger.svg");
 }
 
+@font-face {
+  font-family: "open-sans-regular";
+  src: url("./fonts/Open_Sans/static/OpenSans-Regular.ttf");
+}
+body {
+  font-family: "open-sans-regular", sans-serif;
+  font-size: 15px;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .nav-link {
   font-weight: 600;
 }
@@ -120,4 +135,15 @@ html {
 
 .z-max {
   z-index: 999 !important;
+}
+
+.card-img-container {
+  display: flex;
+  align-items: center;
+  min-height: 15rem;
+  max-height: 16rem;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }/*# sourceMappingURL=custom.css.map */
